# embedded-game-controller

./: .clang-format  .gitmodules  CMakeLists.txt  embedded-game-controller.pc.in
.github/workflows/: ci.yml
embedded-game-controller/: CMakeLists.txt  bluetooth.c  bluetooth.h  bt_backend.h  driver_api.h  egc.c  egc.h  internals.h  platform.h  usb.h  usb_backend.h  utils.h
embedded-game-controller/backends/: libusb.c  ogc.c  wii.c
embedded-game-controller/usb_drivers/: dragonrise.c  nintendo_switch.c  sony_ds3.c  sony_ds4.c
example/: main.c  terminal.c
